Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/IToLowerCaseFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public interface IToLowerCaseFilter {

    public String applyToLowerCaseFilter(String result);
}
